feat: added button to show general infos